2007-08-19 Xavier Claessens  <xclaesse@gmail.com>

	* python/pyempathy/pyempathy.defs:
	* python/pyempathy/pyempathymodule.c:
	* python/pyempathy/Makefile.am:
	* python/pyempathy/pyempathy.override:
	* python/pyempathygtk/pyempathygtk.override:
	* python/pyempathygtk/pyempathygtk.defs:
	* python/pyempathygtk/Makefile.am:
	* python/pyempathygtk/pyempathygtkmodule.c:
	* python/Makefile.am:
	* libempathy/empathy-time.h:
	* configure.ac:
	* Makefile.am: Add python binding. Fixes bug #457660 (Michael Sheldon).

2007-08-19 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.glade: Edit menu should be second
	from the left. Fixes bug #467827 (Cosimo Cecchi).

2007-08-13 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-group-chat.c: Only update the topic of it has
	really be changed, avoid diplaying many times "Topic set to:" message.

	* libempathy-gtk/empathy-chat.c: Some Jabber chatroom sends messages
	received before we joined the room, this avoid displaying those messages
	if we already logged them last time we joined that room. Previous
	workaround prevented Empathy to log offline messages.

2007-08-12 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.12.

2007-08-12 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Update libtool version.

	* doc/libempathy-gtk/tmpl/empathy-images.sgml:
	* doc/libempathy-gtk/tmpl/empathy-status-presets.sgml:
	* NEWS: Updated.

2007-08-12 Xavier Claessens  <xclaesse@gmail.com>

	* data/irc.profile: Removed spaces in the SupportedPresences key to
	workaround a MC warning SF bug 1772539.

2007-08-11 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c: Make "Add account" button
	insensitive when we are creating one. Fixes bug #459170
	(Jaap A. Haitsma).

2007-08-11 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: s/Local Network/People nearby/
	(Sjoerd Simons)
